2010-04-16 Thunor <thunorsif_at_hotmail.com>
* Runtime options now works i.e. the changes are saved or discarded.
  The joystick configurator and selector navigation will be implemented
  later when I'm happy with the layout and scalability looks good.

2010-04-15 Thunor <thunorsif_at_hotmail.com>
* Optimised vkeyb drawing: when alpha is 0 it's no longer rendered.

2010-04-14 Thunor <thunorsif_at_hotmail.com>
* Re-engineered the way the runtime options are set-up so that it's
  easier to modify. The hotspots though remain manually configured.
* The vkeyb state is now restored after accessing runtime options.
* Added key repeat delay and interval to the rcfile.
* Added sound volume to the rcfile.
* Added a runtime options icon to the control bar.
* Reorganised runtime option locations across pages.

2010-04-13 Thunor <thunorsif_at_hotmail.com>
* Added fg/bg colour adjustment to the runtime options.
* Fixed a bug in BMF_RenderText: the new fg_colour wasn't being stored.
* BMF_RenderText will now reuse the least requested slot if necessary.

2010-04-12 Thunor <thunorsif_at_hotmail.com>
* Added joystick dead zone adjustment to the runtime options.
* Added volume control adjustment to the runtime options.
* Added key repeat delay/interval adjustment to the runtime options.

2010-03-31 Thunor <thunorsif_at_hotmail.com>
* Replaced the OSS (Open Sound System) API with the portable SDL API.

2010-03-24 Thunor <thunorsif_at_hotmail.com>
* Version 2.1-5 released

2010-03-22 Thunor <thunorsif_at_hotmail.com>
* Fixed an issue with the load selector changing the working directory
  and the GP2X's relatively referenced rcfile being written elsewhere.
* Added -d command line option to show any input device IDs on-screen.
* A sample joystick control set is written to newly created PC rcfiles.

2010-03-21 Thunor <thunorsif_at_hotmail.com>
* Added a protected property to ctrl_remaps to prevent modifying some
  important universally active controls such as toggle-keyboard.